force-app/main/default/objects/Lead/fields/Lead_Created__c.field-meta.xml
<CustomField>
    <fullName>Lead_Created__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>This is for lead conversion tracking</inlineHelpText>
    <label>Lead Created</label>
    <type>Checkbox</type>
</CustomField>