force-app/main/default/objects/Lead/fields/NS_Commodity__c.field-meta.xml
<CustomField>
    <fullName>NS_Commodity__c</fullName>
    <inlineHelpText>What will be shipped - commodity, contents of shipment</inlineHelpText>
    <label>Commodity</label>
    <type>TextArea</type>
</CustomField>