force-app/main/default/objects/Lead/fields/NS_Current_Transport_Method__c.field-meta.xml
<CustomField>
    <fullName>NS_Current_Transport_Method__c</fullName>
    <inlineHelpText>Enter current method used for transportation</inlineHelpText>
    <label>Current Transport Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3PL</fullName>
            </value>
            <value>
                <fullName>Drayage</fullName>
            </value>
            <value>
                <fullName>LTL</fullName>
            </value>
            <value>
                <fullName>Rail</fullName>
            </value>
            <value>
                <fullName>Truckload</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>