force-app/main/default/objects/Lead/fields/NS_Site_Details__c.field-meta.xml
<CustomField>
    <fullName>NS_Site_Details__c</fullName>
    <inlineHelpText>Enter additional Site details of benefit to lead process</inlineHelpText>
    <label>Site Details</label>
    <type>TextArea</type>
</CustomField>