force-app/main/default/objects/Lead/fields/NS_Transportation_Authority_Number__c.field-meta.xml
<CustomField>
    <fullName>NS_Transportation_Authority_Number__c</fullName>
    <inlineHelpText>Enter valid transportation authority number for company/organization.</inlineHelpText>
    <label>Transportation Authority Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>