force-app/main/default/objects/Lead/fields/NS_Volume_by_Rail__c.field-meta.xml
<CustomField>
    <fullName>NS_Volume_by_Rail__c</fullName>
    <inlineHelpText>Enter anticipated volume by rail</inlineHelpText>
    <label>Volume by Rail</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>