force-app/main/default/objects/Lead/fields/NSSales_Originating_Department__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Originating_Department__c</fullName>
    <description>Sales - Required field to indicate the NS Business Unit that the Lead derived. Field will drive workbench data as well as account classification.</description>
    <label>Originating Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Automotive</fullName>
            </value>
            <value>
                <fullName>Coal</fullName>
            </value>
            <value>
                <fullName>Industrial Development</fullName>
            </value>
            <value>
                <fullName>Industrial Products</fullName>
            </value>
            <value>
                <fullName>Intermodal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>