force-app/main/default/objects/Lead/fields/Unqualified_Reason__c.field-meta.xml
<CustomField>
    <fullName>Unqualified_Reason__c</fullName>
    <label>Unqualified Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alternative Product</fullName>
            </value>
            <value>
                <fullName>Alternative Source</fullName>
            </value>
            <value>
                <fullName>Market Conditions</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Plant Closure</fullName>
            </value>
            <value>
                <fullName>Price, Service</fullName>
            </value>
            <value>
                <fullName>Weather - Seasonality</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>