force-app/main/default/objects/Lead/fields/X18_Digit_ID__c.field-meta.xml
<CustomField>
    <fullName>X18_Digit_ID__c</fullName>
    <description>18 Digit ID for Leads</description>
    <formula>CASESAFEID(Id)</formula>
    <label>18 Digit ID</label>
    <type>Text</type>
</CustomField>