force-app/main/default/objects/Lead/recordTypes/NS_General_Lead.recordType-meta.xml
<RecordType>
    <fullName>NS_General_Lead</fullName>
    <active>true</active>
    <businessProcess>General Lead Process</businessProcess>
    <description>Sales</description>
    <label>General Lead</label>
</RecordType>