force-app/main/default/objects/Lead/recordTypes/NS_ID_Lead.recordType-meta.xml
<RecordType>
    <fullName>NS_ID_Lead</fullName>
    <active>true</active>
    <businessProcess>ID Lead Process</businessProcess>
    <description>Sales</description>
    <label>ID Lead</label>
</RecordType>