force-app/main/default/objects/Lead/validationRules/Lead_Validation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_Validation_Rule</fullName>
    <active>true</active>
    <description>Requires one of the following (phone or email)  to be populated before saving a Lead record.</description>
    <errorConditionFormula>AND(ISBLANK( Email ) , ISBLANK( Phone ))</errorConditionFormula>
    <errorMessage>Please enter either email or phone number</errorMessage>
</ValidationRule>