force-app/main/default/objects/Lead/validationRules/NSSales_vr_Lead_Convert_Rule_Orig_Dept.validationRule-meta.xml
<ValidationRule>
    <fullName>NSSales_vr_Lead_Convert_Rule_Orig_Dept</fullName>
    <active>false</active>
    <description>Lead record must have an Originating Department prior to conversion because Opportunity field Originating Department is a required field.</description>
    <errorConditionFormula>AND( IsConverted, ISBLANK(TEXT(NSSales_Originating_Department__c )) )</errorConditionFormula>
    <errorDisplayField>NSSales_Originating_Department__c</errorDisplayField>
    <errorMessage>Originating Department must be selected prior to converting Lead.</errorMessage>
</ValidationRule>