force-app/main/default/objects/Lead/listViews/General_Leads.listView-meta.xml
<ListView>
    <fullName>General_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead.NS_General_Lead</value>
    </filters>
    <label>General Leads</label>
    <sharedTo>
        <role>Sales_Automotive_Leadership</role>
        <role>Sales_Automotive_Manager</role>
        <role>Sales_Coal_Leadership</role>
        <role>Sales_Coal_Manager</role>
        <role>Sales_Industrial_Product_Leadership</role>
        <role>Sales_Industrial_Product_Manager</role>
        <role>Sales_Intermodal_Leadership</role>
        <role>Sales_Intermodal_Manager</role>
        <role>Sales_Marketing_Research_Forecasting_User</role>
    </sharedTo>
</ListView>