force-app/main/default/objects/Lead/listViews/ID_Leads.listView-meta.xml
<ListView>
    <fullName>ID_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead.NS_ID_Lead</value>
    </filters>
    <label>ID Leads</label>
    <sharedTo>
        <role>Sales_Industrial_Development_Leadership</role>
        <role>Sales_Industrial_Development_Manager</role>
    </sharedTo>
</ListView>