force-app/main/default/objects/Lead/listViews/ID_Open_Leads.listView-meta.xml
<ListView>
    <fullName>ID_Open_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead.NS_ID_Lead</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notEqual</operation>
        <value>Inactive,Unqualified,Complete</value>
    </filters>
    <label>ID Open Leads</label>
    <sharedTo>
        <role>Sales_Industrial_Development_Leadership</role>
        <role>Sales_Industrial_Development_Manager</role>
    </sharedTo>
</ListView>