force-app/main/default/objects/Lead/listViews/NSSales_Leads_Industrial_Development_Lead.listView-meta.xml
<ListView>
    <fullName>NSSales_Leads_Industrial_Development_Lead</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Everything</filterScope>
    <label>Industrial Development Leads Queue</label>
    <sharedTo>
        <roleAndSubordinates>ID_Leadership</roleAndSubordinates>
    </sharedTo>
</ListView>